--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -5,3 +5,8 @@ edition = "2021"
 
 [dependencies]
 engine = { path = '../engine' }
+env_logger = "0.10.0"
+log = "0.4.19"
+pollster = "0.3.0"
+wgpu = "0.16.1"
+winit = "0.28.6"
