--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -10,3 +10,4 @@ winit = "0.28.6"
 bytemuck = { version = "1.13.1", features = [ "derive" ] }
 image = { version = "0.24", features = ["png"] }
 hashbrown = "0.14.0"
+nalgebra-glm = "0.3"
