--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -11,3 +11,4 @@ bytemuck = { version = "1.13.1", features = [ "derive" ] }
 image = { version = "0.24", features = ["png"] }
 hashbrown = "0.14.0"
 nalgebra-glm = "0.3"
+smallvec = "1.10.0"
