--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.71"
 engine = { path = '../engine' }
 env_logger = "0.10.0"
 log = "0.4.19"
