--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -12,3 +12,4 @@ image = { version = "0.24", features = ["png"] }
 hashbrown = "0.14.0"
 nalgebra-glm = "0.18"
 smallvec = "1.10.0"
+thiserror = "1.0.40"
