--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -12,3 +12,15 @@ nalgebra-glm = "0.18"
 pollster = "0.3.0"
 wgpu = "0.16.1"
 winit = "0.28.6"
+
+[profile.dev]
+debug = 2
+debug-assertions = true
+overflow-checks = true
+
+[profile.release]
+debug = 1
+opt-level = 3
+overflow-checks = false
+strip = "debuginfo"
+lto = "fat"
