--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 engine = { path = '../engine' }
-env_logger = "0.10.0"
-log = "0.4.19"
+pretty_env_logger = "0.5"
+log = "0.4"
 nalgebra-glm = "0.18"
 pollster = "0.3.0"
 wgpu = "0.16.1"
