--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,15 @@
 [workspace]
 members = ["crates/*"]
 resolver = "2"
+
+[profile.dev]
+debug = 2
+debug-assertions = true
+overflow-checks = true
+
+[profile.release]
+debug = 1
+opt-level = 3
+overflow-checks = false
+strip = "debuginfo"
+lto = "fat"
