Fix out of order build steps

--- a/.github/workflows/cargo-build.yaml
+++ b/.github/workflows/cargo-build.yaml
@@ -37,6 +37,7 @@ jobs:
         with:
           path: ~/.cargo
         working-directory: ./crates/client
+      - shell: bash
         run: | 
           trunk build
       - uses: actions/upload-pages-artifact@v1
