--- a/crates/content/Cargo.toml
+++ b/crates/content/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
+delaunator = "1.0.2"
 engine = { path = "../engine" }
 nalgebra-glm = "0.18.0"
+pathfinding = "4.3.0"
 rand = "0.8.5"
