--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -18,6 +18,7 @@ pollster = "0.3.0"
 wgpu = "0.16.1"
 winit = "0.28.6"
 cfg-if = "1"
+puffin = "0.16.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
