--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -22,5 +22,5 @@ rand = "0.8.5"
 egui-wgpu = { version = "0.22.0", features = ["puffin", "winit"] }
 egui = "0.22.0"
 puffin_egui = "0.22.0"
-egui-winit = "0.22.0"
+egui-winit = { version = "0.22.0", default-features = false, features = ["smithay-clipboard", "puffin", "wayland", "links"] }
 raw-window-handle = "0.5.2"
