--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -19,12 +19,14 @@ wgpu = "0.16.1"
 winit = "0.28.6"
 cfg-if = "1"
 puffin = "0.16.0"
+instant = "0.1.12"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
 console_log = "1.0"
 wgpu = { version = "0.16", features = ["webgl"]}
 wasm-bindgen = "0.2"
+puffin = { version = "0.16.0", features = ["web"] }
 wasm-bindgen-futures = "0.4.30"
 web-sys = { version = "0.3", features = [
     "Document",
