--- a/crates/content/Cargo.toml
+++ b/crates/content/Cargo.toml
@@ -8,4 +8,5 @@ delaunator = "1.0.2"
 engine = { path = "../engine" }
 nalgebra-glm = "0.18.0"
 pathfinding = "4.3.0"
+profiling = { version = "1.0.8", features = ["puffin", "profile-with-puffin"] }
 rand = "0.8.5"
